--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="uk">
 <head>
     <meta charset="UTF-8">
-    <title>VR Симулятор Збірки ПК - Новий Інтерфейс</title>
-    <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
+    <title>VR Симулятор Збірки ПК - Фінальна версія</title>
+    <script src="https://aframe.io/releases/1.7.0/aframe.min.js"></script>
     <script src="https://unpkg.com/super-hands@3.0.4/dist/super-hands.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/aframe-extras@6.1.1/dist/aframe-extras.min.js"></script>
     <script src="https://unpkg.com/aframe-event-set-component@^4.1.1/dist/aframe-event-set-component.min.js"></script>
@@ -49,34 +49,34 @@
         <a-sky src="#sky"></a-sky>
         <a-plane id="ground-plane" src="#ground" rotation="-90 0 0" width="20" height="20" static-body nav-mesh></a-plane>
 
-        <a-entity id="pc-case" position="0 1 -1">
+        <a-entity id="pc-case" position="0 0.5 -1">
             <a-box position="0 0 0" width="0.4" height="0.02" depth="0.5" color="#2a2a2a" static-body></a-box>
             <a-box position="-0.19 0.2 0" width="0.02" height="0.4" depth="0.5" color="#2a2a2a" static-body></a-box>
             <a-box position="0 0.2 -0.24" width="0.4" height="0.4" depth="0.02" color="#2a2a2a" static-body></a-box>
             <a-box position="0 0.2 0.24" width="0.4" height="0.4" depth="0.02" color="#2a2a2a" static-body></a-box>
         </a-entity>
 
-        <a-box id="motherboard" mixin="interactive" position="-0.8 1.2 0" width="0.3" height="0.02" depth="0.35" color="#1a5f1a"
+        <a-box id="motherboard" mixin="interactive" position="-0.8 0.7 0" width="0.3" height="0.02" depth="0.35" color="#1a5f1a"
                show-description-on-grab="description: Материнська плата - поєднує всі компоненти.">
             <a-text value="Motherboard" position="0 0.02 0" align="center" scale="0.3 0.3 0.3"></a-text>
         </a-box>
-        <a-box id="cpu" mixin="interactive" position="-0.5 1.2 -0.6" width="0.08" height="0.02" depth="0.08" color="#4a4a4a"
+        <a-box id="cpu" mixin="interactive" position="-0.5 0.7 -0.6" width="0.08" height="0.02" depth="0.08" color="#4a4a4a"
                show-description-on-grab="description: CPU (Процесор) - мозок комп'ютера.">
             <a-text value="CPU" position="0 0.02 0" align="center" scale="0.2 0.2 0.2"></a-text>
         </a-box>
-        <a-box id="ram" mixin="interactive" position="0.8 1.2 0" width="0.12" height="0.02" depth="0.03" color="#2a7a2a"
+        <a-box id="ram" mixin="interactive" position="0.8 0.7 0" width="0.12" height="0.02" depth="0.03" color="#2a7a2a"
                show-description-on-grab="description: RAM (Оперативна пам'ять) - короткочасна пам'ять.">
             <a-text value="RAM" position="0 0.02 0" align="center" scale="0.2 0.2 0.2"></a-text>
         </a-box>
-        <a-box id="gpu" mixin="interactive" position="0.5 1.2 -0.6" width="0.25" height="0.03" depth="0.15" color="#3a3a8a"
+        <a-box id="gpu" mixin="interactive" position="0.5 0.7 -0.6" width="0.25" height="0.03" depth="0.15" color="#3a3a8a"
                show-description-on-grab="description: GPU (Відеокарта) - обробляє графіку.">
             <a-text value="GPU" position="0 0.02 0" align="center" scale="0.25 0.25 0.25"></a-text>
         </a-box>
-        <a-box id="psu" mixin="interactive" position="-1.0 1.2 0.4" width="0.15" height="0.08" depth="0.15" color="#5a5a5a"
+        <a-box id="psu" mixin="interactive" position="-1.0 0.7 0.4" width="0.15" height="0.08" depth="0.15" color="#5a5a5a"
                show-description-on-grab="description: Блок живлення - забезпечує енергією.">
             <a-text value="PSU" position="0 0.05 0" align="center" scale="0.2 0.2 0.2"></a-text>
         </a-box>
-        <a-box id="ssd" mixin="interactive" position="1.0 1.2 0.4" width="0.1" height="0.01" depth="0.07" color="#7a7a7a"
+        <a-box id="ssd" mixin="interactive" position="1.0 0.7 0.4" width="0.1" height="0.01" depth="0.07" color="#7a7a7a"
                show-description-on-grab="description: SSD (Накопичувач) - довготривала пам'ять.">
             <a-text value="SSD" position="0 0.01 0" align="center" scale="0.15 0.15 0.15"></a-text>
         </a-box>
@@ -89,12 +89,12 @@
                 <a-cursor id="cursor" raycaster="objects: [mixin='interactive']"></a-cursor>
             </a-camera>
 
-            <a-entity id="rightHand" mixin="physics-hands" hand-controls="hand: right"></a-entity>
-            <a-entity id="leftHand" mixin="physics-hands" hand-controls="hand: left"></a-entity>
+            <a-entity id="rightHand" mixin="physics-hands" hand-controls="hand: right; handModelStyle: lowPoly; color: #ffdbac;"></a-entity>
+            <a-entity id="leftHand" mixin="physics-hands" hand-controls="hand: left; handModelStyle: lowPoly; color: #ffdbac;"></a-entity>
         </a-entity>
 
         <script>
-            // NEW: Показує опис над об'єктом, коли його взяли
+            // Показує опис над об'єктом, коли його взяли
             AFRAME.registerComponent('show-description-on-grab', {
               schema: {
                 description: {type: 'string', default: 'Опис предмета.'},
@@ -121,7 +121,7 @@
             AFRAME.registerComponent('respawnable', {
               init: function () { this.initialPosition = this.el.object3D.position.clone(); },
               tick: function () {
-                if (this.el.object3D.position.y < 0 && !this.el.is('grabbed')) { this.resetEntity(); }
+                if (this.el.object3D.position.y < -5 && !this.el.is('grabbed')) { this.resetEntity(); }
               },
               resetEntity: function() {
                 const el = this.el;
